adjusted icon color, fixed overflow

--- a/fun_test/web/angular/qadashboard/src/app/fun-card/fun-card.component.css
+++ b/fun_test/web/angular/qadashboard/src/app/fun-card/fun-card.component.css
@@ -51,6 +51,7 @@ table {
   padding-left: 10px;
   padding-right: 10px;
   position: relative;
+  height: 40px;
 }
 
 
